partman-auto (74) UNRELEASED; urgency=low

  * Don't create the last partition as a logical partition when all partitions
    are defined as primary and there are sufficient primary partitions
    available. Closes: #413505.
  * Make it possible to use a primary partition for LVM. Thanks to Grégory
    Oestreicher for spotting the issue and providing an initial patch.

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jan 2008 09:39:12 +0100

partman-auto (73) unstable; urgency=low

  * Moved definitions.sh to ./lib/base.sh.
  * Move recipes.sh and auto-shared.sh to ./lib/.
  * auto-shared.sh: rename wipe_disk() to auto_init_disk().
  * Use functions provided by partman-partitioning in auto_init_disk():
    - use the create_new_label function; don't prompt for disk label to use
      unless the default is invalid
    - create_new_label will now take care of removing existing LVM data from
      the selected device; the actual code to erase existing LVM data has been
      moved to partman-lvm
    Changes inspired by and partially based on a patch proposed in #396023 by
    Jérémy Bobbio.
  * Major whitespace cleanup and some coding style improvements.
  * Requires: partman-base (>= 114); partman-partitioning (>= 54).

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Japanese (ja.po) by Kenshi Muto
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ

 -- Frans Pop <fjp@debian.org>  Tue, 11 Dec 2007 14:03:38 +0100

partman-auto (72) unstable; urgency=low

  * Revert support for erasing encrypted LVM volumes introduced in (69).
    There are too many problems with it and starting fresh seems better than
    stacking change on change to fix it. Closes: #425829.
  * lvm-wipe-disk(): needs device-mapper support while removing devices.
  * lvm-wipe-disk(): fix restart logic.

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay
  * French (fr.po) by Christian Perrier
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Polish (pl.po) by Bartosz Fenski